@@ -783,6 +783,28 @@ CAMLexport wchar_t *caml_win32_getenv(wchar_t const *lpName)
 
 int caml_win32_rename(const wchar_t * oldpath, const wchar_t * newpath)
 {
+  /* First handle corner-cases not handled by MoveFileEx:
+     - dir to empty dir - positive - should succeed
+     - dir to existing file - should fail */
+  DWORD old_attribs = GetFileAttributes(oldpath);
+  if ((old_attribs != INVALID_FILE_ATTRIBUTES) &&
+      (old_attribs & FILE_ATTRIBUTE_DIRECTORY) != 0 &&
+      (old_attribs & FILE_ATTRIBUTE_HIDDEN) == 0 &&
+      (old_attribs & FILE_ATTRIBUTE_SYSTEM) == 0) {
+    DWORD new_attribs = GetFileAttributes(newpath);
+    if ((new_attribs != INVALID_FILE_ATTRIBUTES) &&
+        (new_attribs & FILE_ATTRIBUTE_HIDDEN) == 0 &&
+        (new_attribs & FILE_ATTRIBUTE_SYSTEM) == 0) {
+      if ((new_attribs & FILE_ATTRIBUTE_DIRECTORY) != 0) {
+        /* Try to delete and fall though.
+           RemoveDirectoryW fails on non-empty dirs as intended. */
+        RemoveDirectoryW(newpath);
+      } else {
+        errno = ENOTDIR;
+        return -1;
+      }
+    }
+  }
   /* MOVEFILE_REPLACE_EXISTING: to be closer to POSIX
      MOVEFILE_COPY_ALLOWED: MoveFile performs a copy if old and new
        paths are on different devices, so we do the same here for
